--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ requires-python = ">=3.12"
 dependencies = [
     "flask (>=3.1.2,<4.0.0)"
 ]
+packages = [
+    { include = "sourcemanager" }
+]
 
 
 [build-system]
