--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,9 @@ packages = [
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[dependency-groups]
+dev = [
+    "coverage (>=7.11.3,<8.0.0)",
+    "pytest (>=9.0.0,<10.0.0)"
+]
