--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,9 @@ build-backend = "poetry.core.masonry.api"
 dev = [
     "coverage (>=7.11.3,<8.0.0)",
     "pytest (>=9.0.0,<10.0.0)",
-    "pytest-cov (>=7.0.0,<8.0.0)"
+    "pytest-cov (>=7.0.0,<8.0.0)",
+    "autopep8 (>=2.3.2,<3.0.0)",
+    "pylint (>=4.0.2,<5.0.0)"
 ]
 
 [tool.poetry.scripts]
